zerocopy-derive/tests/ui-stable/struct.stderr
error: unsupported on types with type parameters
  --> tests/ui-stable/struct.rs:14:10
   |
14 | #[derive(AsBytes)]
   |          ^^^^^^^
   |
   = note: this error originates in the derive macro `AsBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot derive Unaligned with repr(align(N > 1))
  --> tests/ui-stable/struct.rs:23:11
   |
23 | #[repr(C, align(2))]
   |           ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
  --> tests/ui-stable/struct.rs:27:21
   |
27 | #[repr(transparent, align(2))]
   |                     ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
  --> tests/ui-stable/struct.rs:33:16
   |
33 | #[repr(packed, align(2))]
   |                ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
  --> tests/ui-stable/struct.rs:37:18
   |
37 | #[repr(align(1), align(2))]
   |                  ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
  --> tests/ui-stable/struct.rs:41:8
   |
41 | #[repr(align(2), align(4))]
   |        ^^^^^^^^

error[E0692]: transparent struct cannot have other repr hints
  --> tests/ui-stable/struct.rs:27:8
   |
27 | #[repr(transparent, align(2))]
   |        ^^^^^^^^^^^  ^^^^^^^^

error[E0587]: type has conflicting packed and align representation hints
  --> tests/ui-stable/struct.rs:34:1
   |
34 | struct Unaligned3;
   | ^^^^^^^^^^^^^^^^^
